tests/negative/import5_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .import5_b
import .import5_c

export *
